[gd_scene load_steps=28 format=3 uid="uid://b80v73vwojiel"]

[ext_resource type="Script" uid="uid://dwurr3tlsev0c" path="res://scripts/sword_pawn_new.gd" id="1_8lukj"]
[ext_resource type="Texture2D" uid="uid://etxwn4cn56vm" path="res://assets/new-sprites/sword.png" id="2_pahqr"]
[ext_resource type="PackedScene" uid="uid://bvpy5vv8h2po" path="res://scenes/hitbox.tscn" id="2_ubift"]
[ext_resource type="PackedScene" uid="uid://bqj2of68myte6" path="res://scenes/hurtbox.tscn" id="3_jto6l"]
[ext_resource type="Texture2D" uid="uid://765ascl68g5y" path="res://assets/new-sprites/sword_pawn.png" id="3_pahqr"]
[ext_resource type="Texture2D" uid="uid://cdcqwrv02ld1i" path="res://assets/new-sprites/sword_asleep.png" id="3_yf5xe"]
[ext_resource type="Script" uid="uid://dovx0wh3tvcd6" path="res://scripts/CharacterStates/state_machine.gd" id="4_44cgn"]
[ext_resource type="Script" uid="uid://d0o5n4w0dcpwj" path="res://scripts/CharacterStates/enemy_states/pawn/asleep.gd" id="6_vu2xa"]
[ext_resource type="Script" uid="uid://dk6rj05rnro2b" path="res://scripts/CharacterStates/enemy_states/stun.gd" id="7_44cgn"]
[ext_resource type="PackedScene" uid="uid://dqy362l1svbkt" path="res://scenes/stun_effect.tscn" id="7_jto6l"]
[ext_resource type="Script" uid="uid://bnseq2l8fykgt" path="res://scripts/CharacterStates/enemy_states/pawn/idle.gd" id="7_pahqr"]
[ext_resource type="Script" uid="uid://ewtjpry8k1ap" path="res://scripts/CharacterStates/enemy_states/pawn/sword_pawn/return.gd" id="9_f3vmk"]
[ext_resource type="Script" uid="uid://dpo6p8o7ek5og" path="res://scripts/CharacterStates/enemy_states/pawn/sword_pawn/sword_charge.gd" id="10_yf5xe"]
[ext_resource type="AudioStream" uid="uid://clxrayn8i32c" path="res://assets/sounds/pop.wav" id="14_f3vmk"]
[ext_resource type="AudioStream" uid="uid://cx3ge8o5y0s5r" path="res://assets/sounds/explode.wav" id="15_0dfpc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yf5xe"]
size = Vector2(9, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f3vmk"]
atlas = ExtResource("2_pahqr")
region = Rect2(0, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_0dfpc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f3vmk")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_0dfpc"]
atlas = ExtResource("3_yf5xe")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yf5xe"]
atlas = ExtResource("3_pahqr")
region = Rect2(0, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_14xpc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0dfpc")
}],
"loop": true,
"name": &"asleep",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yf5xe")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4xdj4"]
size = Vector2(28, 29)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vu2xa"]
size = Vector2(28, 29)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pahqr"]
size = Vector2(28, 29)

[sub_resource type="Animation" id="Animation_d6i2o"]
resource_name = "death"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("death/death_sound:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.96666664),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="Animation" id="Animation_0fhdg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("death/death_sound:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ouc26"]
_data = {
&"RESET": SubResource("Animation_0fhdg"),
&"death": SubResource("Animation_d6i2o")
}

[node name="sword_pawn_new" type="CharacterBody2D" groups=["enemy"]]
position = Vector2(1, 0)
collision_layer = 2
script = ExtResource("1_8lukj")
hp = 3
run_speed = 60.0
walk_speed = 20.0
metadata/_custom_type_script = "uid://ceae8g8t1uin3"

[node name="position_markers" type="Node" parent="."]
physics_interpolation_mode = 1

[node name="left_sword_pos" type="Node2D" parent="position_markers"]
position = Vector2(-7, -14)

[node name="right_sword_pos" type="Node2D" parent="position_markers"]
position = Vector2(8, -14)

[node name="charge_left" type="Node2D" parent="position_markers"]
position = Vector2(-26, -2)

[node name="charge_right" type="Node2D" parent="position_markers"]
position = Vector2(27, -1)

[node name="left_sight" type="RayCast2D" parent="."]
target_position = Vector2(-140, 0)
collision_mask = 2

[node name="right_sight" type="RayCast2D" parent="."]
rotation = 3.1415927
target_position = Vector2(-140, 1.2239188e-05)
collision_mask = 2

[node name="sword" parent="." instance=ExtResource("2_ubift")]
position = Vector2(-7, -14)
collision_layer = 32
collision_mask = 68

[node name="CollisionShape2D" type="CollisionShape2D" parent="sword"]
position = Vector2(-0.5, 0)
shape = SubResource("RectangleShape2D_yf5xe")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="sword"]
sprite_frames = SubResource("SpriteFrames_0dfpc")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_14xpc")
animation = &"idle"

[node name="hitbox" parent="." instance=ExtResource("2_ubift")]
visible = false
collision_layer = 32
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2(0, 1.5)
shape = SubResource("RectangleShape2D_4xdj4")

[node name="hurtbox" parent="." instance=ExtResource("3_jto6l")]
visible = false
collision_layer = 16
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtbox"]
position = Vector2(0, 1.5)
shape = SubResource("RectangleShape2D_vu2xa")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, 1.5)
shape = SubResource("RectangleShape2D_pahqr")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("start_state")]
script = ExtResource("4_44cgn")
start_state = NodePath("idle")
metadata/_custom_type_script = "uid://dovx0wh3tvcd6"

[node name="asleep" type="Node" parent="StateMachine" node_paths=PackedStringArray("charge_state")]
script = ExtResource("6_vu2xa")
charge_state = NodePath("../charge")
anim_name = "asleep"
metadata/_custom_type_script = "uid://d4lhjeo7o4pfj"

[node name="idle" type="Node" parent="StateMachine" node_paths=PackedStringArray("charge_state", "stun_state")]
script = ExtResource("7_pahqr")
charge_state = NodePath("../charge")
stun_state = NodePath("../stun")
anim_name = "idle"
metadata/_custom_type_script = "uid://d4lhjeo7o4pfj"

[node name="delay" type="Timer" parent="StateMachine/idle"]
one_shot = true

[node name="charge" type="Node" parent="StateMachine" node_paths=PackedStringArray("search_state", "stun_state")]
script = ExtResource("10_yf5xe")
search_state = NodePath("../return")
stun_state = NodePath("../stun")
metadata/_custom_type_script = "uid://d4lhjeo7o4pfj"

[node name="delay" type="Timer" parent="StateMachine/charge"]
one_shot = true

[node name="charge_time" type="Timer" parent="StateMachine/charge"]
wait_time = 3.0
one_shot = true

[node name="return" type="Node" parent="StateMachine" node_paths=PackedStringArray("idle_state", "charge_state")]
script = ExtResource("9_f3vmk")
idle_state = NodePath("../idle")
charge_state = NodePath("../charge")
anim_name = "return"
metadata/_custom_type_script = "uid://d4lhjeo7o4pfj"

[node name="stun" type="Node" parent="StateMachine" node_paths=PackedStringArray("unstun_state")]
script = ExtResource("7_44cgn")
unstun_state = NodePath("../idle")
anim_name = "idle"
metadata/_custom_type_script = "uid://d4lhjeo7o4pfj"

[node name="stun_time" type="Timer" parent="StateMachine/stun"]
wait_time = 3.0
one_shot = true

[node name="stun_effect" parent="." instance=ExtResource("7_jto6l")]
visible = false
position = Vector2(0, 2)

[node name="hurt_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("14_f3vmk")
volume_db = 4.0

[node name="death" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_ouc26")
}

[node name="death_sound" type="AudioStreamPlayer2D" parent="death"]
scale = Vector2(1.5, 1.5)
stream = ExtResource("15_0dfpc")

[connection signal="timeout" from="StateMachine/charge/charge_time" to="StateMachine/charge" method="_on_charge_time_timeout"]
[connection signal="timeout" from="StateMachine/stun/stun_time" to="StateMachine/stun" method="_on_stun_time_timeout"]
